--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -58,6 +58,17 @@
   text-align: left;
 }
 
+.skills-list {
+  justify-content: center;
+  gap: 0.25rem;
+  margin: 0.75rem;
+}
+
+.skills-list button {
+  padding: 0 0.25rem;
+  font-weight: 400;
+}
+
 .swap-text {
   position: relative;
 }
@@ -65,8 +76,8 @@
 .visit-link {
   position: relative;
   display: inline-block;
-  padding: 0.5rem;
-  margin-top: 1rem;
+  padding: 0.25rem;
+  margin-top: 0.5rem;
 }
 
 .see-details-text {
@@ -89,7 +100,6 @@
     filter: grayscale(75%);
   }
   .project-link a {
-    font-size: 2rem;
     text-decoration-line: none;
     color: light-lime;
   }
@@ -108,18 +118,14 @@
 
 @media (min-width: 1200px) {
   .project {
-    padding: 1.5rem 2rem;
+    padding: 1rem;
   }
   .project:only-child {
     width: 50%;
   }
   .project-link a {
-    font-size: 2.5rem;
+    font-size: 2rem;
     line-height: 1.2;
-  }
-
-  .description {
-    width: 75%;
   }
 }
 
